# Learn-OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  Source.cpp  Texture.h  prog
.cache/clangd/index/: Camera.h.BDDB2DE7A3C04751.idx  Mesh.h.0540B283A3DAA649.idx  Model.h.069E66F19D858535.idx  Shader.h.04E3CB707F63DD1B.idx  Source.cpp.FB506AA98BC7C07D.idx  gl.c.16ED920E7FF2542A.idx  gl.h.2F725A2DD8C0A049.idx  imconfig.h.310195BC1E03806D.idx  imgui.cpp.3D490C38A5EEC198.idx  imgui.h.36C75C5B621C3ED6.idx  imgui_demo.cpp.1DE9B22B66EDB361.idx  imgui_draw.cpp.EE5C37124C09E4EE.idx  imgui_impl_glfw.cpp.7AD2340739EA9779.idx  imgui_impl_glfw.h.D639239F6AB40ECD.idx  imgui_impl_opengl3.cpp.84A0E0481BC22CC9.idx  imgui_impl_opengl3.h.7CE7B2058654A029.idx  imgui_impl_opengl3_loader.h.CEECC4D74D206CC2.idx  imgui_internal.h.FCCFF028F2655B24.idx  imgui_tables.cpp.E4B2377E1E3F1CF9.idx  imgui_widgets.cpp.0BB7502B1CA39031.idx  imstb_rectpack.h.525B52CFEE8DEE74.idx  imstb_textedit.h.E4E20ACCC8E68377.idx  imstb_truetype.h.A07793E97F1B7526.idx  khrplatform.h.37EE1A33A4EF5406.idx
Headers/: Camera.h  Shader.h
Shaders/: fragmentShader.glsl  lampFragmentShader.glsl  lightFragmentShader.glsl  lightVertexShader.glsl  vertexShader.glsl
include/LearnOpenGL/: Camera.h  Mesh.h  Model.h  Shader.h
include/glad/: gl.h
libs/: Shader.h
resources/Shaders/: 1.model_loading.fs  1.model_loading.vs  lampFragmentShader.glsl  lightFragmentShader.glsl
src/: Source.cpp
